k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cheddar
spec:
  #tls:
  #- secretName: whatever.A.B.C.D.nip.io
  #  hosts:
  #  - whatever.A.B.C.D.nip.io
  rules:
  - host: my.app
    http:
      paths:
      - path: /
        backend:
          serviceName: cheddar
          servicePort: 80
